--- a/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
@@ -23,6 +23,7 @@
   - Maintenance
   - ResearchDirector
   - Brig
+  - Robotics # DeltaV - Robotics access
   - Cryogenics
   special:
   - !type:AddImplantSpecial
