--- a/Resources/Prototypes/Roles/Jobs/Science/scientist.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/scientist.yml
@@ -15,6 +15,8 @@
   access:
   - Research
   - Maintenance
+  extendedAccess: # DeltaV: Scientists get robotics access on lowpop
+  - Robotics
 
 - type: startingGear
   id: ScientistGear
