--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -125,6 +125,7 @@
   - ResearchDirector
   - Scientist
   - ResearchAssistant
+  - Roboticist # DeltaV: Roboticist job
 
 - type: department
   id: Silicon
