--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -1268,7 +1268,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Research"]]
+    access: [["Robotics"]] # DeltaV: Robotics access instead of Research
   - type: PointLight
     radius: 1.5
     energy: 1.6
@@ -1992,7 +1992,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Research"]]
+    access: [["Robotics"]] # DeltaV: Robotics access instead of Research
 
 - type: entity
   parent: VendingMachine
