--- a/Resources/Prototypes/_DeltaV/Entities/Objects/Devices/Electronics/door_access.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Objects/Devices/Electronics/door_access.yml
@@ -4,4 +4,4 @@
   suffix: Robotics, Locked
   components:
   - type: AccessReader
-    access: [["Research"]] # Uses research access until the job is added
+    access: [["Robotics"]]
