--- a/Resources/Prototypes/_DeltaV/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_DeltaV/Loadouts/role_loadouts.yml
@@ -28,6 +28,24 @@
   - Trinkets
   - GroupSpeciesBreathTool
 
+# Epistemics
+- type: roleLoadout
+  id: JobRoboticist
+  groups:
+  - GroupTankHarness
+  - RoboticistHead
+  - ScientistNeck
+  - RoboticistJumpsuit
+  - ScientistBackpack
+  - RoboticistOuterClothing
+  - RoboticistGloves
+  - RoboticistShoes
+  - RoboticistPDA
+  - Glasses
+  - Survival
+  - Trinkets
+  - GroupSpeciesBreathTool
+
 # Command
 - type: roleLoadout
   id: JobAdministrativeAssistant
