--- a/Resources/Prototypes/_DV/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/_DV/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -10,6 +10,20 @@
   id: LockerBaseSecureDeltaV
 
 - type: entity
+  parent: LockerBaseSecure
+  id: LockerPsychologist
+  name: psychologist's locker
+  components:
+  - type: Sprite
+    sprite: DeltaV/Structures/Storage/closet.rsi
+  - type: EntityStorageVisuals
+    stateBaseClosed: psych
+    stateDoorOpen: psych_open
+    stateDoorClosed: psych_door
+  - type: AccessReader
+    access: [["Medical"]] # starcup: Medical, was Psychologist
+
+- type: entity
   parent: LockerBaseSecureDeltaV
   id: LockerKitchen
   name: kitchen locker
