--- a/Resources/Prototypes/_DV/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/_DV/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -25,6 +25,18 @@
 
 - type: entity
   parent: LockerBaseSecureDeltaV
+  id: LockerAdministrativeAssistant
+  name: administrative assistant's locker
+  components:
+  - type: EntityStorageVisuals
+    stateBaseClosed: admin_assist
+    stateDoorOpen: admin_assist_open
+    stateDoorClosed: admin_assist_door
+  - type: AccessReader
+    access: [["Command"]]
+
+- type: entity
+  parent: LockerBaseSecureDeltaV
   id: LockerKitchen
   name: kitchen locker
   components:
