Make the wall locker sprites actually work (#3568)
* actually works now

* i might be a moron

(cherry picked from commit 16534d7d850ae08627eae91a24d6b58fc4f0b73d)

--- a/Resources/Prototypes/_DV/Entities/Structures/Storage/Closets/Lockers/wall_lockers.yml
+++ b/Resources/Prototypes/_DV/Entities/Structures/Storage/Closets/Lockers/wall_lockers.yml
@@ -2,6 +2,7 @@
   parent: BaseWallCloset
   id: BaseWallClosetDeltaV
   components:
+  - type: Appearance
   - type: Sprite
     sprite: _DV/Structures/Storage/wall_locker.rsi
 
@@ -9,6 +10,7 @@
   parent: BaseWallLocker
   id: BaseWallLockerDeltaV
   components:
+  - type: Appearance
   - type: Sprite
     sprite: _DV/Structures/Storage/wall_locker.rsi
 
