add robotics access and mapping stuff (#2028)
* add Robotics access

* add robotics doors for mapping

* add blast doors

* add lockable button

* add it to AA

* add access to mysta/scientist

* add roboticist job spawn

---------

Co-authored-by: deltanedas <@deltanedas:kde.org>
(cherry picked from commit f1c3e2e853816e09f98b55af43e71c2a0327a8f2)

--- a/Resources/Prototypes/_DeltaV/Entities/Structures/Doors/Windoors/windoor.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Structures/Doors/Windoors/windoor.yml
@@ -13,3 +13,12 @@
   components:
   - type: AccessReader
     access: [["Mail"]]
+
+- type: entity
+  parent: WindoorSecure
+  id: WindoorSecureRoboticsLocked
+  suffix: Robotics, Locked
+  components:
+  - type: ContainerFill
+    containers:
+      board: [ DoorElectronicsRobotics ]
