--- a/Resources/Prototypes/_starcup/Maps/glacier.yml
+++ b/Resources/Prototypes/_starcup/Maps/glacier.yml
@@ -62,7 +62,7 @@
         #science
           ResearchDirector: [ 1, 1 ]
 #          ForensicMantis: [ 1, 1 ]  # starcup: no epistemics
-#          Roboticist: [ 1, 2 ]  # starcup: no roboticist
+          Roboticist: [ 1, 2 ]
           Scientist: [ 2, 3 ]
           ResearchAssistant: [ 2, 2 ]
           Borg: [ 2, 3 ]
