--- a/Resources/Prototypes/_DeltaV/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -3,19 +3,17 @@
   id: LockerBaseDeltaV
   components:
   - type: Sprite
-    sprite: _DV/Structures/Storage/closet.rsi
+    sprite: _DeltaV/Structures/Storage/closet.rsi
 
 - type: entity
   parent: [ LockerBaseDeltaV, LockerBaseSecure ]
   id: LockerBaseSecureDeltaV
 
 - type: entity
-  parent: LockerBaseSecure
+  parent: LockerBaseSecureDeltaV
   id: LockerPsychologist
   name: psychologist's locker
   components:
-  - type: Sprite
-    sprite: DeltaV/Structures/Storage/closet.rsi
   - type: EntityStorageVisuals
     stateBaseClosed: psych
     stateDoorOpen: psych_open
