--- a/Resources/Prototypes/_DeltaV/Entities/Structures/Doors/Airlocks/access.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Structures/Doors/Airlocks/access.yml
@@ -30,3 +30,22 @@
   - type: ContainerFill
     containers:
       board: [ DoorElectronicsRobotics ]
+
+# Security-locked External airlocks. These don't exist upstream for some reason.
+- type: entity
+  parent: AirlockExternal
+  id: AirlockExternalSecurityLocked
+  suffix: External, Security, Locked
+  components:
+  - type: ContainerFill
+    containers:
+      board: [ DoorElectronicsSecurity ]
+
+- type: entity
+  parent: AirlockExternalGlass
+  id: AirlockExternalGlassSecurityLocked
+  suffix: External, Glass, Security, Locked
+  components:
+  - type: ContainerFill
+    containers:
+      board: [ DoorElectronicsSecurity ]
