--- a/Resources/Prototypes/_DeltaV/Loadouts/Jobs/Science/roboticist.yml
+++ b/Resources/Prototypes/_DeltaV/Loadouts/Jobs/Science/roboticist.yml
@@ -31,3 +31,13 @@
   id: RoboticistPDA
   equipment:
     id: RoboticistPDA
+
+- type: loadout
+  id: NeuroroboticistPDA
+  equipment:
+    id: NeuroroboticistPDA
+
+- type: loadout
+  id: MechatronicsPDA
+  equipment:
+    id: MechatronicsPDA
