--- a/Resources/Prototypes/_DeltaV/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/_DeltaV/Loadouts/loadout_groups.yml
@@ -226,6 +226,14 @@
   - WhiteShoes
   - ScienceWinterBoots
 
+- type: loadoutGroup # starcup: make roboticist a hybrid role
+  id: RoboticistPDA
+  name: loadout-group-roboticist-id
+  loadouts:
+  - RoboticistPDA
+  - NeuroroboticistPDA
+  - MechatronicsPDA
+
 # Command
 ## Administrative Assistant
 - type: loadoutGroup
