--- a/Resources/Prototypes/_DeltaV/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_DeltaV/Loadouts/role_loadouts.yml
@@ -40,7 +40,7 @@
   - RoboticistOuterClothing
   - RoboticistGloves
   - RoboticistShoes
-  #- RoboticistPDA # starcup: given in startingGear
+  - RoboticistPDA
   - Glasses
   - Survival
   - Trinkets
