--- a/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/jumpskirts.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/jumpskirts.yml
@@ -41,3 +41,16 @@
     sprite: _DeltaV/Clothing/Uniforms/Jumpskirt/admin_assistant.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Uniforms/Jumpskirt/admin_assistant.rsi
+
+# Robo-neuroticist uniform
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpskirtRoboNeuroticist
+  name: robo-neuroticist's jumpskirt
+  description: A jumpskirt fit with dozens of cybernetic gadgets.
+  components:
+  - type: Sprite
+    sprite: _DV/Clothing/Uniforms/Jumpskirt/roboneuroticistpurple.rsi
+  - type: Clothing
+    sprite: _DV/Clothing/Uniforms/Jumpskirt/roboneuroticistpurple.rsi
