--- a/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/jumpsuits.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/jumpsuits.yml
@@ -63,3 +63,14 @@
     sprite: _DeltaV/Clothing/Uniforms/Jumpsuit/kilt.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Uniforms/Jumpsuit/kilt.rsi
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitRoboNeuroticist
+  name: robo-neuroticist's jumpsuit
+  description: A suit fit with dozens of cybernetic gadgets.
+  components:
+  - type: Sprite
+    sprite: _DV/Clothing/Uniforms/Jumpsuit/roboneuroticistpurple.rsi
+  - type: Clothing
+    sprite: _DV/Clothing/Uniforms/Jumpsuit/roboneuroticistpurple.rsi
