namespace 2 + tweaks for costumes

--- a/Resources/Prototypes/_DeltaV/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Clothing/OuterClothing/softsuits.yml
@@ -1,13 +1,13 @@
 - type: entity
-  parent: ClothingOuterHardsuitSyndicate
+  parent: ClothingOuterHardsuitBase # starcup: was ClothingOuterHardsuitSyndicate
   id: ClothingOuterHardsuitRoboNeurotisist
   name: robo-neuroticist softshell suit
   description: "Dramatic cape, stylish collar, and packed to the gills with life support tech'"
   components:
   - type: Sprite
-    sprite: _DV/Clothing/OuterClothing/Suits/eva_roboneuroticist.rsi
+    sprite: _DeltaV/Clothing/OuterClothing/Suits/eva_roboneuroticist.rsi
   - type: Clothing
-    sprite: _DV/Clothing/OuterClothing/Suits/eva_roboneuroticist.rsi
+    sprite: _DeltaV/Clothing/OuterClothing/Suits/eva_roboneuroticist.rsi
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadHelmetRoboNeuroticist
     slot: head
