--- a/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/jumpsuits.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/jumpsuits.yml
@@ -67,10 +67,10 @@
 - type: entity
   parent: ClothingUniformBase
   id: ClothingUniformJumpsuitRoboNeuroticist
-  name: robo-neuroticist's jumpsuit
+  name: neuroroboticist jumpsuit # starcup: neuroroboticist, was robo-neuroticist's
   description: A suit fit with dozens of cybernetic gadgets.
   components:
   - type: Sprite
-    sprite: _DV/Clothing/Uniforms/Jumpsuit/roboneuroticistpurple.rsi
+    sprite: _DeltaV/Clothing/Uniforms/Jumpsuit/roboneuroticistpurple.rsi
   - type: Clothing
-    sprite: _DV/Clothing/Uniforms/Jumpsuit/roboneuroticistpurple.rsi
+    sprite: _DeltaV/Clothing/Uniforms/Jumpsuit/roboneuroticistpurple.rsi
