--- a/Resources/Prototypes/_DeltaV/Roles/Jobs/Epistemics/roboticist.yml
+++ b/Resources/Prototypes/_DeltaV/Roles/Jobs/Epistemics/roboticist.yml
@@ -22,8 +22,7 @@
   - Research
   - Robotics
   - Maintenance
-  extendedAccess: # starcup: make roboticist hybrid role
-  - Engineering
+  - Engineering # starcup: make roboticist a hybrid role. can be changed to extendedAccess if needed
 
 - type: startingGear
   id: RoboticistGear
