--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/robodrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/robodrobe.yml
@@ -4,6 +4,8 @@
     ClothingOuterCoatRobo: 2
     ClothingUniformJumpsuitRoboticist: 2
     ClothingUniformJumpskirtRoboticist: 2
+    ClothingUniformJumpsuitRoboNeuroticist: 2 # starcup
+    ClothingUniformJumpskirtRoboNeuroticist: 2 # starcup
     ClothingShoesColorBlack: 2
     ClothingHandsGlovesRobohands: 2
     ClothingHeadHatCorpsoft: 2
