--- a/Resources/Prototypes/_Frontier/Recipes/Lathes/Packs/tiles.yml
+++ b/Resources/Prototypes/_Frontier/Recipes/Lathes/Packs/tiles.yml
@@ -9,7 +9,7 @@
   - FloorTileItemLightPinkMono
   - FloorTileItemLightYellowMono
   - FloorTileItemOrangeMono
-  - FloorTileItemSus
+  #- FloorTileItemSus # starcup
   - FloorTileItemLightRedMono
   - FloorTileItemRedMono
   - FloorTileItemCheckerboardWood
