add tiles to lathe + remove sus recipe
(cherry picked from commit d2654e001984f1e3478afaf01bba291188a126ce)

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -701,6 +701,7 @@
     runningState: building
     staticPacks:
     - FloorTilesStatic
+    - NFFloorTiles # Frontier
   - type: MaterialStorage
     whitelist:
       tags:
@@ -709,4 +710,5 @@
         - Wooden
         - RawMaterial
         - Plastic
+        - Ingot # Frontier
   - type: OreSiloClient
