angels and devils hit the theatre!  (#2522)
* first pass. sprites and yml

* fixes, get into the drobe and string crate

* shoe issue

* loadouts and fixes

* You.

* bunny's revival

---------

Co-authored-by: mousesweater <moondogg228@gmail.com>
(cherry picked from commit 3f302f7ca856a915dc5e7e5430964cc85cb860a7)

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/theater.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/theater.yml
@@ -42,6 +42,20 @@
     ClothingMaskBlushingClown: 1 # moved from emag inventory
     ClothingMaskBlushingMime: 1 # moved from emag inventory
     # End DeltaV Additions
+    # begin impstation: angel and devil costume
+    ClothingHeadJesterEvilHat: 1
+    ClothingUniformJesterEvil: 1
+    ClothingShoesJesterEvilJanglers: 1
+    ClothingNeckDevilWings: 1
+    ClothingHeadDevilHorns: 1
+    DevilPitchfork: 1
+    ClothingHeadHalo: 1
+    ClothingUniformJumpskirtAngelDress: 1
+    ClothingHandsAngelGloves: 1
+    ClothingShoesAngelSandals: 1
+    ClothingNeckAngelWings: 1
+    HandheldHarpInstrument: 1
+    # end impstation
     ClothingHeadHatRedRacoon: 2
     ClothingOuterRedRacoon: 2
     ClothingHeadPaperSack: 2
