--- a/Resources/Prototypes/_Impstation/Entities/Clothing/Shoes/specific.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Clothing/Shoes/specific.yml
@@ -13,10 +13,12 @@
       collection: FootstepJester
       params:
         variation: 0.07 #copied from the existing jester shoes
-  - type: ItemToggle
-    onUse: false
-    onActivate: false
-    soundActivate:
-      path: /Audio/_Impstation/Effects/Footsteps/jesterstep_on.ogg
-    soundDeactivate:
-      path: /Audio/_Impstation/Effects/Footsteps/jesterstep_off.ogg
+  # begin starcup: no waddle toggle action
+  #- type: ItemToggle
+  #  onUse: false
+  #  onActivate: false
+  #  soundActivate:
+  #    path: /Audio/_Impstation/Effects/Footsteps/jesterstep_on.ogg
+  #  soundDeactivate:
+  #    path: /Audio/_Impstation/Effects/Footsteps/jesterstep_off.ogg
+  # end starcup
