--- a/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
@@ -143,7 +143,7 @@
       - id: CelloInstrument
       - id: ViolaInstrument
       - id: HarpInstrument
-      - id: HandheldHarpInstrument #imp
+      - id: HandheldHarpInstrument # impstation
 
 - type: entity
   id: CrateFunInstrumentsWoodwind
