--- a/Resources/Prototypes/Body/Organs/Animal/animal.yml
+++ b/Resources/Prototypes/Body/Organs/Animal/animal.yml
@@ -102,7 +102,7 @@
   - type: SolutionContainerManager
     solutions:
       stomach:
-        maxVol: 30
+        maxVol: 10 # starcup: was 30
   - type: Item
     size: Small
     heldPrefix: stomach
