add notebooks to loadouts

--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -15,6 +15,21 @@
   - PlushieExperiment
   - PlushieSharkBlue
   - HandheldStationMap
+  - BoxFolderClipboard
+  - BoxFolderBlack
+  - BoxFolderRed
+  - BoxFolderGreen
+  - BoxFolderBlue
+  - BoxFolderWhite
+  - NotebookPocketBlue
+  - NotebookPocketBrown
+  - NotebookPocketGreen
+  - NotebookSpiralCybersun
+  - NotebookSpiralInterdyne
+  - NotebookSpiralBeige
+  - NotebookSpiralPurple
+  - NotebookSpiralTeal
+  - NotebookCompositionBlack
   # end starcup additions
   - ThreeCandles
   - Lighter
