--- a/Resources/Prototypes/_starcup/Loadouts/Miscellaneous/trinkets.yml
+++ b/Resources/Prototypes/_starcup/Loadouts/Miscellaneous/trinkets.yml
@@ -21,3 +21,108 @@
   storage:
     back:
     - PlushieSharkBlue
+
+- type: loadout
+  id: BoxFolderClipboard
+  storage:
+    back:
+    - BoxFolderClipboard
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: BoxFolderBlack
+  storage:
+    back:
+    - BoxFolderBlack
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: BoxFolderRed
+  storage:
+    back:
+    - BoxFolderRed
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: BoxFolderGreen
+  storage:
+    back:
+    - BoxFolderGreen
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: BoxFolderBlue
+  storage:
+    back:
+    - BoxFolderBlue
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: BoxFolderWhite
+  storage:
+    back:
+    - BoxFolderWhite
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookPocketBlue
+  storage:
+    back:
+    - NotebookPocketBlue
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookPocketBrown
+  storage:
+    back:
+    - NotebookPocketBrown
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookPocketGreen
+  storage:
+    back:
+    - NotebookPocketGreen
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookSpiralCybersun
+  storage:
+    back:
+    - NotebookSpiralCybersun
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookSpiralInterdyne
+  storage:
+    back:
+    - NotebookSpiralInterdyne
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookSpiralBeige
+  storage:
+    back:
+    - NotebookSpiralBeige
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookSpiralPurple
+  storage:
+    back:
+    - NotebookSpiralPurple
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookSpiralTeal
+  storage:
+    back:
+    - NotebookSpiralTeal
+  groupBy: "bureaucracy"
+
+- type: loadout
+  id: NotebookCompositionBlack
+  storage:
+    back:
+    - NotebookCompositionBlack
+  groupBy: "bureaucracy"
