--- a/Resources/Prototypes/_DeltaV/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Structures/Machines/vending_machines.yml
@@ -25,3 +25,21 @@
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
     access: [["Mail"]]
+
+- type: entity
+  parent: VendingMachine
+  id: VendingMachineMNKDrobe
+  name: MNK Drobe
+  description: Quality garments provided by MoNoKrome.
+  components:
+  - type: VendingMachine
+    pack: MNKDrobeInventory
+    offState: off
+    brokenState: broken
+  - type: Sprite
+    sprite: _DeltaV/Structures/Machines/VendingMachines/mnkdrobe.rsi
+    layers:
+    - state: off
+      map: ["enum.VendingMachineVisualLayers.Base"]
+    - state: panel
+      map: ["enum.WiresVisualLayers.MaintenancePanel"]
