--- a/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/costumes.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Clothing/Uniforms/costumes.yml
@@ -10,7 +10,7 @@
     sprite: _DeltaV/Clothing/Misc/office_skirt.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Misc/office_skirt.rsi
-    femaleMask: NoMask
+    #femaleMask: NoMask
 
 - type: entity
   parent: ClothingUniformBase
@@ -33,7 +33,7 @@
     sprite: _DeltaV/Clothing/Misc/gym_bra.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Misc/gym_bra.rsi
-    femaleMask: NoMask
+    #femaleMask: NoMask
 
 - type: entity
   parent: ClothingUniformBase
@@ -45,7 +45,7 @@
     sprite: _DeltaV/Clothing/Misc/black_dress.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Misc/black_dress.rsi
-    femaleMask: UniformTop
+    #femaleMask: UniformTop
 
 - type: entity
   parent: ClothingUniformBase
@@ -57,7 +57,7 @@
     sprite: _DeltaV/Clothing/Misc/black_overall.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Misc/black_overall.rsi
-    femaleMask: NoMask
+    #femaleMask: NoMask
 
 - type: entity
   parent: ClothingUniformBase
@@ -69,7 +69,7 @@
     sprite: _DeltaV/Clothing/Misc/exposed_shoulder.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Misc/exposed_shoulder.rsi
-    femaleMask: UniformTop
+    #femaleMask: UniformTop
 
 - type: entity
   parent: ClothingUniformBase
@@ -81,4 +81,4 @@
     sprite: _DeltaV/Clothing/Misc/tracksuit.rsi
   - type: Clothing
     sprite: _DeltaV/Clothing/Misc/tracksuit.rsi
-    femaleMask: NoMask
+    #femaleMask: NoMask
