uncomment MNK mail

--- a/Resources/Prototypes/_DeltaV/Entities/Objects/Specific/Mail/mail.yml
+++ b/Resources/Prototypes/_DeltaV/Entities/Objects/Specific/Mail/mail.yml
@@ -248,7 +248,7 @@
     contents:
     - id: Bible
     - id: ClothingHeadHatWitch1 #DeltaV - Compensates for items that don't exist here
-#    - id: ClothingOuterCoatMNKBlackTopCoat #DeltaV - Compensates for items that don't exist here # starcup - commenting out for now
+    - id: ClothingOuterCoatMNKBlackTopCoat #DeltaV - Compensates for items that don't exist here
 
 - type: entity
   parent: BaseMail
