--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/vending.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/vending.yml
@@ -47,6 +47,8 @@
       weight: 10
     - id: VendingMachineTheater
       weight: 10
+    - id: VendingMachineMNKDrobe # starcup
+      weight: 20
 
 - type: entity
   id: RandomVendingClothing
