--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -530,6 +530,7 @@
     - Carpets
     - Bedsheets
     - BeltsDeltaV # Delta-V
+    - ClothingStarcup # starcup
   - type: EmagLatheRecipes
     emagStaticPacks:
     - ClothingCentComm
